fixed button spacing for Nath's sanity

--- a/skorch/client/stylesheets/skorch/site.scss
+++ b/skorch/client/stylesheets/skorch/site.scss
@@ -1,4 +1,5 @@
-.homeNewJoinGame button, input {
+.homeNewJoinGame button,
+.homeNewJoinGame input {
     margin: 5px;
 }
 
